--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Title</title>
-<!--    <script src="https://unpkg.com/lodash@4.17.20"></script> import 하기전 스크립트로 직접넣었을 때 -->
+    <!-- import 하기전 스크립트로 직접넣었을 때 -->
+    <!--<script src="https://unpkg.com/lodash@4.17.20"></script>-->
 </head>
 <body>
 <!--<script src="./src/index.js"></script>-->
-<script src="./dist/main.js"></script> <!-- bundle된 파일 -->
+<!-- bundle된 파일 -->
+<script src="./dist/main.js"></script>
 </body>
 </html>
