libraryTarget옵션 사용 (지역변수->전역변수)

--- a/index.html
+++ b/index.html
@@ -13,5 +13,9 @@
 <!--<script src="./src/index.js"></script>-->
 <!-- bundle된 파일 -->
 <script src="./dist/main.js"></script>
+<script>
+    var testC = new TestClass();
+    testC.test();
+</script>
 </body>
 </html>
