babel, core-js 설치/사용

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 <!-- bundle된 파일 -->
 <script src="./dist/main.js"></script>
 <script>
-    var testC = new TestClass();
-    testC.test();
+    /*var testC = new TestClass();
+    testC.test();*/
 </script>
 </body>
 </html>
